# research-template

./: .cursorrules  .gitignore  README.md  pyproject.toml
.agent/rules/: agent-collaboration.md  coding-standards.md  marimo-notebook.md
.agent/skills/data-analysis/: SKILL.md
.agent/skills/research-protocol/: SKILL.md
.agent/workflows/: analyze-results.md  marimo-notebook.md  read-paper.md  run-experiment.md
.github/workflows/: ci.yml
configs/: sample.yaml
docs/: ai_collaboration.md  antigravity_skills.md  architecture.md  marimo_overview.md  marp_guide.md  overview.md  pdca_execution.md  roadmap.md  template_guide.md  tex_guide.md  tools.md
docs/experiments/: 2026-02-02.md  README.md
notebooks/: analysis_sample.py
notebooks/marimo_official/: README.md
outputs/: experiments.csv
presentation/: demo.md
scripts/: convert_papers.py  daily_report.py  marimo_ui_check.py  marimo_ui_smoketest.py  pdf_to_images.py  rename_project.py  run_experiment.py  train.py
src/ai_research_template/: __init__.py  core.py  data.py  main.py  metrics.py  utils.py
tests/: conftest.py  test_core.py  test_data.py  test_metrics.py  test_utils.py
tex/handout/: .latexmkrc  main.tex  references.bib
tex/sotsuron/: main.tex
tex/zemi/: main.tex
